syntax = "proto3";

package syncreve;

option go_package = "github.com/xkeyC/Syncreve/pkg/grpc/protos";

// PingService provides health check
service PingService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
  string timestamp = 2;
}
